--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["modderme123 <hidden>"]
 
 [dependencies]
+piston = "0.35.0"
 piston_window = "0.75"
 interpolation = "0.1"
