--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 authors = ["modderme123 <hidden>"]
 
 [dependencies]
-piston = "0.35.0"
 piston_window = "0.75"
-interpolation = "0.1"
+find_folder = "0.3"
