--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "foosball"
 version = "0.1.0"
-authors = ["modderme123 coler706"]
+authors = ["modderme123 <hidden>","coler706 coler706@gmail.com"]
 
 [dependencies]
 piston_window = "0.75"
