--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["modderme123 <hidden>","coler706 coler706@gmail.com"]
 
 [dependencies]
+find_folder = "0.3"
+piston = "0.35.0"
 piston_window = "0.75"
 interpolation = "0.1"
 piston2d-graphics = "0.24.0"
